fixed issues with the calculation
