# main.go
@@ -20,27 +20,27 @@ func main() {
 	loadFruitsAndDiscountsTableMetaData()
 
 	// Endpoints for customer
-	router.GET("/server/api/v1/customers", controllers.FindCustomers)
-	router.GET("/server/api/v1/customers/:login_id", controllers.FindCustomer)
-	router.POST("/server/api/v1/customers", controllers.CreateCustomer)
+	router.GET("/api/v1/customers", controllers.FindCustomers)
+	router.GET("/api/v1/customers/:login_id", controllers.FindCustomer)
+	router.POST("/api/v1/customers", controllers.CreateCustomer)
 
 	// Endpoints for fruits
-	router.GET("/server/api/v1/fruits", controllers.FindFruits)
-	router.GET("/server/api/v1/fruits/:name", controllers.FindFruit)
+	router.GET("/api/v1/fruits", controllers.FindFruits)
+	router.GET("/api/v1/fruits/:name", controllers.FindFruit)
 
 	// Endpoints for cart
-	router.POST("/server/api/v1/cartitem", controllers.CreateUpdateItemInCart)
-	router.GET("/server/api/v1/cartitem/:cart_id", controllers.GetAllCartItems)
-	router.GET("/server/api/v1/cart/:cart_id", controllers.FindCart)
+	router.POST("/api/v1/cartitem", controllers.CreateUpdateItemInCart)
+	router.GET("/api/v1/cartitem/:cart_id", controllers.GetAllCartItems)
+	router.GET("/api/v1/cart/:cart_id", controllers.FindCart)
 
 	// Endpoints for discounts
-	router.GET("/server/api/v1/discounts/:cart_id", controllers.FindDiscounts)
+	router.GET("/api/v1/discounts/:cart_id", controllers.FindDiscounts)
 
 	// Endpoints for coupon
-	router.GET("/server/api/v1/orangecoupon/:cart_id", controllers.ApplyOrangeCoupon)
+	router.GET("/api/v1/orangecoupon/:cart_id", controllers.ApplyOrangeCoupon)
 
 	// Endpoints for coupon
-	router.POST("/server/api/v1/pay", controllers.Pay)
+	router.POST("/api/v1/pay", controllers.Pay)
 
 	// Use middleware to serve static pages for the website
 	router.Use(static.Serve("/", static.LocalFile("./frontend/dist/fruitshop-ui", true)))
@@ -58,7 +58,7 @@ func initSwagger(engine *gin.Engine) {
 	docs.SwaggerInfo.Description = "This API is backend service for the fruit store"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Host = "localhost:8080"
-	docs.SwaggerInfo.BasePath = "/server/api/v1"
+	docs.SwaggerInfo.BasePath = "/api/v1"
 	docs.SwaggerInfo.Schemes = []string{"http"}
 
 	url := ginSwagger.URL("http://localhost:8080/swagger/doc.json")
@@ -66,7 +66,7 @@ func initSwagger(engine *gin.Engine) {
 }
 
 func loadFruitsAndDiscountsTableMetaData() {
-	appleItemDiscount := models.SingleItemDiscount{Count: 1, Discount: 10, Name: "APPLE10"}
+	appleItemDiscount := models.SingleItemDiscount{Count: 7, Discount: 10, Name: "APPLE10"}
 	orangeSingleItemCoupon := models.SingleItemCoupon{
 		Discount: 30,
 		Name:     "ORANGE30",
@@ -112,6 +112,7 @@ func loadFruitsAndDiscountsTableMetaData() {
 	var bananaFromDB models.Fruit
 	models.DB.Where("name = ?", "Banana").First(&bananaFromDB)
 	dualItemDiscount := models.DualItemDiscount{
+		FruitID:   pearFromDB.ID,
 		FruitID_1: pearFromDB.ID,
 		FruitID_2: bananaFromDB.ID,
 		Count_1:   4,
