# models/applieddualitemdiscount.go
@@ -11,7 +11,8 @@ type AppliedDualItemDiscount struct {
 	// Foriegn key for the CartItem table coming from the Cart table
 	CartID uint `gorm:"not null"`
 	// DualItemDiscountID is the primary key from the DualItemDiscount table
-	DualItemDiscountID uint
+	//DualItemDiscountID uint
+	DualItemDiscount []DualItemDiscount `gorm:"foreignkey:ID;association_foreignkey:ID"`
 	// Percentage of the discount needs to be applied
 	Savings float64 `json:"savings"`
 }
