# models/appliedsingleitemcoupon.go
@@ -11,7 +11,8 @@ type AppliedSingleItemCoupon struct {
 	// Foriegn key for the CartItem table coming from the Cart table
 	CartID uint `gorm:"not null"`
 	// SingleItemCouponID is the primary key from the SingleItemCouponID table
-	SingleItemCouponID uint
+	//SingleItemCouponID uint
+	SingleItemCoupon []SingleItemCoupon `gorm:"foreignkey:ID;association_foreignkey:ID"`
 	// Percentage of the discount needs to be applied
 	Savings float64 `json:"savings"`
 }
